--- a/Frontend-Vuetify/src/styles/settings.scss
+++ b/Frontend-Vuetify/src/styles/settings.scss
@@ -1721,4 +1721,7 @@ body .profile-form-inner .form-group {
    }
  }
  
+ button.swal2-styled {
+   color: #fff;
+}
  //============================HomePage Css End============================//
